# HallE

./: .gitignore  README.md  cceval.py  eval_CHAIR.json  eval_chair.sh  eval_total.sh  eval_total1.sh  eval_total2.sh  eval_total_attn.sh  example.jsonl  generate_single.py  generate_single.sh  get_word_list.py  pyproject.toml  requirements.txt
data_process/: generate_joint_10k.py  generate_minus_9k.py  sharegpt_sample_9k.py
eval/: generate_single.py  model_controller.py
eval/mme/: eval.py  eval.sh
eval/pope/: eval.py  eval.sh  evaluate.py
llava/: mm_utils.py
llava/model/: __init__.py  builder.py  llava_arch.py
llava/model/language_model/: llava_llama.py  llava_llama_multi_verifier.py  llava_llama_switch.py  llava_llama_verifier.py  llava_mpt.py
llava/model/multimodal_encoder/: builder.py  clip_encoder.py
llava/serve/: gradio_web_server.py  model_worker.py
llava/train/: train.py  train_switch.py  train_verifier.py  train_with_verifier.py
scripts/: run.sh  run_cu11.sh
scripts/v1_5/: finetune_lora.sh  finetune_lora_verifier.sh  model_control_eval.sh  model_llava_eval.sh  model_verifier_eval.sh  tune_controller.sh  tune_lora.sh  tune_verifier.sh
utils/: chair.py  check_image.py  dl_nltk.py  get_word_list.py  llava_example.ipynb
visual_attn/: visualize_attn.ipynb  visualize_llava_example.ipynb
visual_attn/attn_matrix/: test1_input_ids.npy  test1_output_ids.npy
