[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llava"
version = "1.1.3"
description = "Towards GPT-4 like large language and visual assistant."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]

dependencies = [
    "sentencepiece==0.2.0", "shortuuid==1.0.13",
    "accelerate==0.21.0", "peft==0.4.0", "bitsandbytes==0.41.0",
    "pydantic<2,>=1", "markdown2[all]", "numpy==1.26.0", "scikit-learn==1.2.2",
    "gradio==3.35.2", "gradio_client==0.2.9",
    "requests==2.32.3", "httpx==0.24.0", "uvicorn==0.34.0", "fastapi==0.115.8",
    "einops==0.6.1", "einops-exts==0.0.4", "timm==0.6.13", "nltk==3.9.1",
    "jupyter==1.1.1", "notebook==7.0.8", "jupyterlab==4.0.13",
     "matplotlib==3.10.0", "opencv-python==4.11.0.86"
]

[project.optional-dependencies]
train = ["deepspeed==0.9.5", "ninja", "wandb"]
cu11 = ["torch==2.0.1", "torchvision==0.15.2", "transformers==4.31.0", "tokenizers>=0.12.1,<0.14"]
cu12 = ["torch==2.1.0", "torchvision==0.16.0", "transformers==4.34.1", "tokenizers>=0.14.1,<0.15"]


[project.urls]
"Homepage" = "https://llava-vl.github.io"
"Bug Tracker" = "https://github.com/haotian-liu/LLaVA/issues"

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]
